# SUPSI_Repo

./: .gitattributes  AlgoritmiEsame.docx  AnalisiDeiSegnaleTest1.docx  AnalisiDeiSegnaliTest2.docx  COntabilità.docx  Cartel1.xlsx  Commento soluzione.docx  Esame finale - Copia.docx  Esame.docx  Esame1.docx  EsameFinale.docx  Finanza.docx  Marketing.docx  Micro Test1.docx  Note.docx  README.md  Riassunto Esame 1.docx  Riassunto Esame.docx  Riassunto economia.docx  Riassunto esame.docx  StatisticaDescrittiva.xlsx  StatisticaEsame1.docx  analisi finanziaria.docx  eserciziocaswflow e conto economico.xlsx  esrciziobilancio.xlsx  impresa.docx  input.txt  strategia di impresa.docx
Documentazione/: ConfiguratoreClockPIC32.xlsx
Esame Algebra/: Riassunto esame.docx
Esame Analisi/: Riassunto Esame.docx
Esempi/: CMakeLists.txt  a.out  esempio_static.c  main.c
Esercizi/serie4/es4/es4/: CMakeLists.txt  es4.cpp  es4.h
Excercises/: HTTP risposte.docx
Exercises/: Aircrack.docx  CMakeLists.txt  MostVisitedHandler.java  Routing.ods  network_0.pkt  serverPort.odt  verisionsCodes  viegenere
Librerie Personali/: BTN.c  BTN.h  LCD.c  RGB.c  Timer.h  UART.h
MyListExercise/: Formater.java  ForwardIterator.java  MyIterator.java  Presentable.java
Note/: Application Server.docx  Architetture web.docx  Dependency Injection.docx  HTTP.docx  Mocking.docx  RESTAPI.docx  Refactoring.docx  Servlet.docx  Stima_e_pianificazione_del_lavoro.docx  TemplateEngine.docx  Testing.docx  pattern 2.docx  pattern.docx  progettazione agile.docx  security.docx
Notes/: 2DFormati.docx  Exceptions.odt  (+45 more)
(+1172 files in other folders)
