# CMakeList.txt: progetto CMake per es4. Includere l'origine e definire
# qui la logica specifica del progetto.
#
cmake_minimum_required (VERSION 3.8)

# Aggiungere l'origine all'eseguibile di questo progetto.
add_executable (es4 "es4.cpp" "es4.h")

# TODO: Aggiungere i test e, se necessario, installare le destinazioni.
